2004-11-09  Alvaro del Castillo  <acs@barrapunto.com>

	* docs/sql/README.sql: use template1 as connection database.

	* src/planner-sql-plugin.c: don't create planner group because
	normal postgres user can't create a GROUP.

	* data/sql/database-0.13.sql: don't use planner GROUP.

2004-11-04  Richard Hult  <richard@imendio.com>

	* gtk-doc.make: Update.

	* libplanner/mrp-sql.c: (sql_write_resources): Fix build.
 	* src/planner-sql-plugin.c: (check_database_tables): Change
	warning to message.

2004-10-14  Richard Hult  <richard@imendio.com>

	* src/planner-html-plugin.c: (html_plugin_export): Fill in a
	default filename.

2004-10-13  Richard Hult  <richard@imendio.com>

	* src/planner-*-view.c: Grab focus on activate so we don't
	end up with the toolbar focused.

	* data/glade/html-output.glade:
	* src/planner-html-plugin.c: Activate on enter, use save
	filechooser instead of open.

2004-10-13  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-xsl.c (xml_planner_pre012_write, html_write):
	Check error after saving to XML.

	* libplanner/mrp-file-module.c (mrp_file_reader_read_string): Fix
	typo.

	* src/planner-task-tree.c (task_cmd_move_undo): Remove C++
	comment.

2004-10-10  Alvaro del Castillo <acs@barrapunto.com>
	* eds-backend/docs/Work-alfa8
	All work finished for this milestone.

2004-10-10  Alvaro del Castillo <acs@barrapunto.com>
	* src/planner-sql-plugin.c:
	We don't need to check for upgrade files if the tables don't
	exist in the database.

2004-10-09  Richard Hult  <richard@imendio.com>

	* data/stylesheets/Makefile.am:
	* data/stylesheets/html1_css.xsl:
	* data/stylesheets/html1_gantt.xsl:
	* data/stylesheets/html1_resources.xsl:
	* data/stylesheets/html1_tasks.xsl:
	* data/stylesheets/planner2html.xsl:
	* libplanner/mrp-xsl.c: Clean up the HTML export stylesheet, tweak
	the style a bit, put the header fields in a table. Make the note
	text sections wrap and always show at least 30 days in the gantt
	chart.
