@@ -9,3 +9,7 @@ Type=Application
 Categories=Application;Office;ProjectManagement;
 StartupNotify=true
 MimeType=application/x-planner;
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=planner
+X-GNOME-Bugzilla-Component=General
+X-GNOME-Bugzilla-Version=@VERSION@
