@@ -18,7 +18,7 @@ data/glade/task-input-dialog.glade
 data/mime/planner.keys.in
 data/mime/planner.xml.in
 
-data/planner.desktop.in
+data/planner.desktop.in.in
 
 libegg/recent-files/egg-recent-vfs-utils.c
 
